--- a/themes/tranquilpeak/source/_css/utils/_fonts.scss
+++ b/themes/tranquilpeak/source/_css/utils/_fonts.scss
@@ -46,3 +46,10 @@
     font-weight: 700;
     src:         local('Merriweather Bold Italic'), local('Merriweather-BoldItalic'), url(https://fonts.gstatic.com/s/merriweather/v8/EYh7Vl4ywhowqULgRdYwII1kRdeHIFWYEsp6A2f99b0.ttf) format('truetype');
 }
+
+@font-face{
+    font-family: hymmnos;
+    src: url("../fonts/hymmnos.ttf") format("truetype"),
+    src: url("../fonts/hymmnos.woff") format("woff"),
+    src: url("../fonts/hymmnos.woff2") format("woff2");
+}
