Uses tranquilpeak 3, add friend links

--- a/themes/tranquilpeak/layout/_partial/script.ejs
+++ b/themes/tranquilpeak/layout/_partial/script.ejs
@@ -1,5 +1,8 @@
 <!--SCRIPTS-->
-<%- js('assets/js/script-peofhqjkzcghmndknakluequy1y6owxdwpaqyju9ntl9zxnk7rdolb3rjjoj.min.js') %>
+<%- js('assets/js/jquery.js') %>
+<%- js('assets/js/jquery.fancybox.js') %>
+<%- js('assets/js/thumbs.js') %>
+<%- js('assets/js/tranquilpeak.js') %>
 <!--SCRIPTS END-->
 <% if (post.comments) { %>
     <% if (theme.disqus_shortname) { %>
