--- a/themes/tranquilpeak/source/_css/utils/_variables.scss
+++ b/themes/tranquilpeak/source/_css/utils/_variables.scss
@@ -4,7 +4,7 @@
 // Font families
 $open-sans:            'Open Sans';
 $open-sans-sans-serif: 'Open Sans', sans-serif;
-$merriweather-serif:   'Merriweather', serif;
+$merriweather-serif:   'Merriweather', 'Noto Serif', 'Noto Serif CJK SC', serif;
 $monospace:             Menlo, Consolas, monospace;
 
 $font-family-base: $open-sans-sans-serif;
