--- a/themes/tranquilpeak/source/_css/utils/_fonts.scss
+++ b/themes/tranquilpeak/source/_css/utils/_fonts.scss
@@ -47,9 +47,7 @@
     src:         local('Merriweather Bold Italic'), local('Merriweather-BoldItalic'), url(https://fonts.gstatic.com/s/merriweather/v8/EYh7Vl4ywhowqULgRdYwII1kRdeHIFWYEsp6A2f99b0.ttf) format('truetype');
 }
 
-@font-face{
-    font-family: hymmnos;
-    src: url("../fonts/hymmnos.ttf") format("truetype"),
-    src: url("../fonts/hymmnos.woff") format("woff"),
-    src: url("../fonts/hymmnos.woff2") format("woff2");
+@font-face {
+    font-family: 'hymmnos';
+    src: local('hymmnos') format('truetype');
 }
