--- a/themes/tranquilpeak/layout/_partial/footer.ejs
+++ b/themes/tranquilpeak/layout/_partial/footer.ejs
@@ -1,5 +1,5 @@
 <footer id="footer" class="main-content-wrap">
     <span class="copyrights">
-        Copyrights &copy; <%= date(new Date(), 'YYYY') + ' ' + config.author || config.title %>. All Rights Reserved.
+        <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-sa/4.0/80x15.png" /></a><br />The work by <%- config.author %>, unless otherwise specified, is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">CC 4.0 BY-SA</a> license.
     </span>
 </footer>
