--- a/themes/tranquilpeak/layout/_partial/sidebar.ejs
+++ b/themes/tranquilpeak/layout/_partial/sidebar.ejs
@@ -16,7 +16,7 @@
                 <a href="<%- url_for('/#about') %>">
                     <img class="sidebar-profile-picture" src="<%= authorPicture %>" alt="<%= __('global.author_picture') %>"/>
                 </a>
-                <h4 class="sidebar-profile-name" onclick="snow()"><%= config.author %> (click here to have some <i class="fas fa-snowflake"></i>)</h4>
+                <h4 class="sidebar-profile-name" style="cursor: pointer;" onclick=""><%= config.author %> (click here to have some <i class="fas fa-snowflake"></i>)</h4>
                 <% if (__('author.bio')) { %>
                     <h5 class="sidebar-profile-bio"><%- markdown(__('author.bio')) %></h5>
                 <% } %>
